@@ -13,7 +13,6 @@ import org.junit.Test;
 
 import cz.hatua.jtimelog.Configuration;
 import cz.hatua.jtimelog.JTimeLogException;
-import cz.hatua.jtimelog.logs.AllLogEntries;
 
 public class AllLogEntriesTest {
 
@@ -24,7 +23,7 @@ public class AllLogEntriesTest {
 		cfg = new HashMap<>();
 		cfg.put("DATAFILE", "/home/standa/jtimelog/jtimelog_test.txt");
 		cfg.put("CATEGORIESFILE", "/home/standa/jtimelog/jtasks.txt");
-		cfg.put("NEWDAYSTART", new Integer((LocalTime.now().getHour() + 1) % 24).toString());
+		cfg.put("NEWDAYSTART", Integer.valueOf((LocalTime.now().getHour() + 1) % 24).toString());
 		cfg.put("DATETIMEPATTERN", "yyyy-MM-dd HH:mm");
 		cfg.put("TIMEPATTERN", "HH:mm");
 		Configuration.getConfiguration().resetConfiguration(cfg);
@@ -33,7 +32,7 @@ public class AllLogEntriesTest {
 
 	@Test
 	public void currentDayToday() throws JTimeLogException {
-		cfg.put("NEWDAYSTART", new Integer(LocalTime.now().getHour()).toString());
+		cfg.put("NEWDAYSTART", Integer.valueOf(LocalTime.now().getHour()).toString());
 		Configuration.getConfiguration().resetConfiguration(cfg);
 
 		AllLogEntries ale = new AllLogEntries();
@@ -41,13 +40,13 @@ public class AllLogEntriesTest {
 		LocalDate cd = ale.getCurrentDay();
 		assertTrue(
 				String.format("ld: '%s'; cd: '%s'; Time: '%s', Config.NEWDAYSTART: '%s'", ld.toString(), cd.toString(),
-						LocalTime.now().toString(), Configuration.getConfiguration().get("NEWDAYSTART")),
+						LocalTime.now().toString(), Configuration.getCfgString("NEWDAYSTART")),
 				ld.equals(cd));
 	}
 
 	@Test
 	public void currentDayYesterday() throws JTimeLogException {
-		cfg.put("NEWDAYSTART", new Integer(LocalTime.now().getHour() + 1).toString());
+		cfg.put("NEWDAYSTART", Integer.valueOf(LocalTime.now().getHour() + 1).toString());
 		Configuration.getConfiguration().resetConfiguration(cfg);
 
 		AllLogEntries ale = new AllLogEntries();
@@ -55,7 +54,7 @@ public class AllLogEntriesTest {
 		LocalDate cd = ale.getCurrentDay();
 		assertTrue(
 				String.format("ld: '%s'; cd: '%s'; Time: '%s', Config.NEWDAYSTART: '%s'", ld.toString(), cd.toString(),
-						LocalTime.now().toString(), Configuration.getConfiguration().get("NEWDAYSTART")),
+						LocalTime.now().toString(), Configuration.getCfgString("NEWDAYSTART")),
 				ld.equals(cd));
 	}
 
